JSP와 DB 연동 확인, list.recruit 페이지 생성 필요

--- a/cloud computing/WebContent/HTML/main_page.html
+++ b/cloud computing/WebContent/HTML/main_page.html
@@ -7,9 +7,9 @@
 <body>
 	<div class="main_btn_area">
 		<button type="button" class="btn_topic"
-			onclick="location.href='JSP/topic_page.jsp'">시사페이지</button>
+			onclick="location.href='../JSP/topic_page.jsp'">시사페이지</button>
 		<button type="button" class="btn_recruit"
-			onclick="location.href='JSP/recruitment_page.jsp'">채용페이지</button>
+			onclick="location.href='../JSP/list.recruit'">채용페이지</button>
 	</div>
 </body>
 </html>
