최초 접속 페이지 생성

--- a/cloud computing/WebContent/HTML/main_page.html
+++ b/cloud computing/WebContent/HTML/main_page.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Main Page</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="main_btn.css">
+    <title>Main Page</title>
 </head>
+
 <body>
-	<div class="main_btn_area">
-		<button type="button" class="btn_topic"
-			onclick="location.href='../JSP/topic_page.jsp'">시사페이지</button>
-		<button type="button" class="btn_recruit"
-			onclick="location.href='../JSP/list.recruit'">채용페이지</button>
-	</div>
+    <div class="main_btn_area">
+        <button type="button" class="btn_topic" onclick="location.href='../JSP/'">기업별 합격예측</button>
+        <button type="button" class="btn_recruit" onclick="location.href='../JSP/list.recruit'">채용 공고 조회</button>
+    </div>
 </body>
+
 </html>
