--- a/cloud computing/WebContent/HTML/main_page.html
+++ b/cloud computing/WebContent/HTML/main_page.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="main_btn.css">
+    <link rel="stylesheet" href="../CSS/main_btn.css">
     <title>Main Page</title>
 </head>
 
