페이지 수정

--- a/cloud computing/WebContent/HTML/main_page.html
+++ b/cloud computing/WebContent/HTML/main_page.html
@@ -3,14 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../CSS/main_btn.css">
-<title>Main Page</title>
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="main_btn.css">
+    <title>Main Page</title>
 </head>
+
 <body>
-	<div class="main_btn_area">
-		<button type="button" class="btn_topic"
-			onclick="location.href='../JSP/topic_page.jsp'">시사페이지</button>
-		<button type="button" class="btn_recruit"
-			onclick="location.href='../JSP/recruitment_page.jsp'">채용페이지</button>
-	</div>
+    <div class="main_btn_area">
+        <button type="button" class="btn_topic" onclick="location.href='http://54.235.0.24:1102/spec'">기업별 합격예측</button>
+        <button type="button" class="btn_recruit" onclick="location.href='../JSP/recruitment_page.jsp'">채용 공고 조회</button>
+    </div>
 </body>
+
 </html>
